--- a/backend/src/main/resources/application-test.properties
+++ b/backend/src/main/resources/application-test.properties
@@ -1,3 +1,12 @@
-spring.profiles.active=test
+# H2 connection
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
 
-spring.jpa.open-in-view=false
+# H2 client
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Show sql
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
